<resources>
    <string name="app_name">Calculator</string>
    <string name="currency_conv">Currency Converter</string>
    <string name="history">History</string>
    <string name="ok">OK</string>
    <string name="clear_history">Clear History</string>
    
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sieben">7</string>
    <string name="acht">8</string>
    <string name="neun">9</string>
    
    <string name="clear">C</string>
    <string name="parentheses">( )</string>
    <string name="percentage">%</string>
    <string name="divide">\u00F7</string>
    <string name="multiply">x</string>
    <string name="substract">-</string>
    <string name="add">+</string>
    <string name="plusminus">+/-</string>
    <string name="point">.</string>
    <string name="equals">=</string>

    <string name="no_history">There is no saved history</string>
    <string name="copy_to_clipboard">Copied to clipboard</string>
    <string name="convert">CONVERT</string>
    <string name="prompt_amount">Enter amount to convert</string>
    <string name="convert_from">Convert From</string>
    <string name="convert_to">Convert To</string>
    <string name="error_message">Something went wrong</string>
    <string name="enter_convert_value">Enter a value to convert</string>

    <string name="fixerio_access_key">40de9c4812a9c55722007a79e2048639</string>

    <string-array name="currency_codes">
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTC</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYN</item>
        <item>BYR</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHF</item>
        <item>CLF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CUC</item>
        <item>CUP</item>
        <item>CVE</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>ERN</item>
        <item>ETB</item>
        <item>EUR</item>
        <item>FJD</item>
        <item>FKP</item>
        <item>GBP</item>
        <item>GEL</item>
        <item>GGP</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>GTQ</item>
        <item>GYD</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>IMP</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JEP</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>JPY</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KMF</item>
        <item>KPW</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KYD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LRD</item>
        <item>LSL</item>
        <item>LTL</item>
        <item>LVL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MMK</item>
        <item>MNT</item>
        <item>MOP</item>
        <item>MRO</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PGK</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SBD</item>
        <item>SCR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SHP</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>STD</item>
        <item>SVC</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>TOP</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>USD</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VEF</item>
        <item>VND</item>
        <item>VUV</item>
        <item>WST</item>
        <item>XAF</item>
        <item>XAG</item>
        <item>XAU</item>
        <item>XCD</item>
        <item>XDR</item>
        <item>XOF</item>
        <item>XPF</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMK</item>
        <item>ZMW</item>
        <item>ZWL</item>
    </string-array>
</resources>