<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:textAlignment="textEnd"
        android:textSize="33sp"
        android:id="@+id/praxeis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:lines="2"
        android:inputType="textMultiLine"/>

    <ImageButton
        android:layout_margin="5dp"
        android:background="?attr/actionBarItemBackground"
        android:src="@drawable/ic_baseline_history_24"
        android:id="@+id/history"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_margin="5dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_exchange"
        android:id="@+id/exchange"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.30"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:layout_margin="5dp"
        android:background="@drawable/circular_button"
        android:src="@drawable/ic_baseline_backspace_24"
        android:id="@+id/backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/praxeis"
        app:layout_constraintVertical_bias="0.95"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_margin="5dp"
                android:textSize="25sp"
                android:textColor="@color/clear"
                android:background="@drawable/circular_button"
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/clear" />

            <Button
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/parentheses"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/parentheses" />

            <Button
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/percentage"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/percentage" />

            <Button
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/sieben"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/sieben" />

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/acht"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/acht" />

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/neun"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/neun" />

            <Button
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/substract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/substract" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/two" />

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/three" />

            <Button
                android:layout_margin="5dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/add" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/plusminus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/plusminus" />

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/zero" />

            <Button
                android:layout_margin="5dp"
                android:background="@drawable/circular_button"
                android:textSize="25sp"
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/point" />

            <Button
                android:textColor="@color/design_default_color_background"
                android:background="@drawable/circular_button"
                android:backgroundTint="@color/colorAccent"
                android:layout_margin="5dp"
                android:textSize="25sp"
                android:id="@+id/equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/equals" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>