<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve_shape"
    android:padding="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/history"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recy"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>


    <LinearLayout
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/clear_history_custom"
            android:layout_marginEnd="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="bold"
            android:clickable="true"
            android:background="@drawable/ripple_effect"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/ok_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:textStyle="bold"
            android:clickable="true"
            android:background="@drawable/ripple_effect"
            android:focusable="true"
            />
    </LinearLayout>



</LinearLayout>
