<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CurrencyConverter"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >


        <EditText
            android:id="@+id/currency_to_be_converted"
            android:hint="@string/prompt_amount"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            />

        <ImageView
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/swap"
            android:id="@+id/swap"
            android:layout_width="24dp"
            android:layout_height="24dp" />


        <LinearLayout
            android:weightSum="1"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="0.5"
                android:layout_marginEnd="15dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginBottom="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/convert_from"
                    android:textSize="16sp"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_border"
                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/convert_from"
                        />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginBottom="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/convert_to"
                    android:textSize="16sp"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_border"
                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/convert_to"
                        />
                </RelativeLayout>
            </LinearLayout>



        </LinearLayout>



    </LinearLayout>
    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:background="@drawable/convert_button"
        android:text="@string/convert"
        />

    <TextView
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/currency_result"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>